[package]
name = "xxxdh"
license = "MIT"
version = "0.7.0"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography", "x3dh"]
description = "Pure Rust X3DH key exchange protocol implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = {version = "0.9.4", optional = true }
cryptimitives = "0.15.2"
cryptraits = "0.10.0"
rand_core = "0.6.3"
thiserror = "1.0.30"
zeroize = "1.4.3"

[features]
default = ["x25519-ristretto", "hkdf-sha256", "aead-aes-gcm"]
aead-aes-gcm = ["aes-gcm"]
hkdf-sha256 = []
hkdf-sha512 = []
x25519-ristretto = []